platform/interfaces/flowise/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flowise
  namespace: flowise
  labels:
    app: flowise
spec:
  selector:
    matchLabels:
      app: flowise
  replicas: 1
  template:
    metadata:
      labels:
        app: flowise
    spec:
      # nodeSelector:
        # cloud.google.com/compute-class: Scale-Out
        # cloud.google.com/compute-class: Performance
        # cloud.google.com/machine-family: c3
      containers:
      - name: flowise
        image: flowiseai/flowise:2.2.6
        imagePullPolicy: Always
        resources: 
          requests:
            cpu: "1"
            memory: "2Gi"
          limits:
            cpu: "2"
            memory: "4Gi"
        ports:
        - name: http
          containerPort: 3000
